--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
-{%s extends "layout.html" %}
-{% block body %}
+{% extends "layout.html" %}
+{% block title %}Andrew Tribone{% endblock %}
+{% block content %}
 	<div class="container">
 		<div class="row-fluid">
 			<div class="hero-unit">
