--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,31 @@
 	<head>
 	{% block head %}
 		<meta charset="utf-8">
+		<title>{% block title %}{% endblock %}</title>
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='atribone.css') }}">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap.css') }}">
-		<title>{% block title %}{% endblock %}</title>
+
+		<!-- jQuery -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js"></script>
+		<script>window.jQuery || document.write('<script src="{{
+			url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+
+		<script type=text/javascript>
+			$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+		</script>
+
+		<script type=text/javascript>
+			$(function() {
+				$('a#blob').bind('click', function() {
+					$.getJSON($SCRIPT_ROOT + '/_get_blob', {
+						blob_path: $('input[name="blob"]').val()
+					}, function(data) {
+						$("#blob_content").text(data.result);
+					});
+					return false;
+				});
+			});
+		</script>
 	{% endblock %}
 	</head>
 <body>
