Top-level AJAX working

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -224,8 +224,7 @@ a:hover {
 .container,
 .navbar-static-top .container,
 .navbar-fixed-top .container,
-.na
-vbar-fixed-bottom .container {
+.navbar-fixed-bottom .container {
   width: 940px;
 }
 
@@ -2152,7 +2151,7 @@ table th[class*="span"],
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("glyphicons-halflings.png");
+  background-image: url("../img/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
 }
@@ -2172,7 +2171,7 @@ table th[class*="span"],
 .dropdown-menu > .active > a > [class*=" icon-"],
 .dropdown-submenu:hover > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"] {
-  background-image: url("glyphicons-halflings-white.png");
+  background-image: url("../img/glyphicons-halflings-white.png");
 }
 
 .icon-glass {
