--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,13 +4,28 @@
 	{% block head %}
 		<meta charset="utf-8">
 		<title>{% block title %}{% endblock %}</title>
-		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='atribone.css') }}">
-		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap.css') }}">
 
 		<!-- jQuery -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
 		<script>window.jQuery || document.write('<script src="{{
-			url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
+			url_for('static', filename='js/jquery.js') }}">\x3C/script>')</script>
+
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/atribone.css') }}">
+		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+		<!-- prettifier -->
+		<link href="{{ url_for('static', filename='css/prettify.css') }}" type="text/css" rel="stylesheet" />
+		<script type="text/javascript" src="{{ url_for('static', filename='js/prettify.js') }}"></script>
+
+		<script>
+			addEventListener('load', prettyPrint, false);
+
+			// Add prettyprint class to pre elements
+			$(document).ready(function(){
+				$('pre').addClass('prettyprint');
+				prettyPrint();
+			});
+		</script>
 
 		<script type=text/javascript>
 			$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
@@ -18,13 +33,15 @@
 
 		<script type=text/javascript>
 			$(function() {
-				$('a#blob').bind('click', function() {
+				$('a#blob').bind('click', function(event) {
+					var relpath = $(event.target).text();
 					$.getJSON($SCRIPT_ROOT + '/_get_blob', {
-						blob_path: $('input[name="blob"]').val()
+						relpath: relpath
 					}, function(data) {
-						$("#blob_content").text(data.result);
+						$("#code").show();
+						$("#code").text(data.result);
+						prettyPrint()
 					});
-					return false;
 				});
 			});
 		</script>
