--- a/att/templates/index.html
+++ b/att/templates/index.html
@@ -14,6 +14,7 @@
 					<p>
 						Hi. This page is a work in progress. To see the source visit
 						<a class="label label-info" href="https://github.com/att14/AndrewTribone">this cool website</a>.
+						Or check it out below.
 					</p>
 				</div>
 			</div>
