--- a/att/templates/layout.html
+++ b/att/templates/layout.html
@@ -7,8 +7,7 @@
 
 		<!-- jQuery -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
-		<script>window.jQuery || document.write('<script src="{{
-			url_for('static', filename='js/jquery.js') }}">\x3C/script>')</script>
+		<script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/jquery.js') }}">\x3C/script>')</script>
 
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/atribone.css') }}">
 		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
