--- a/tribone/web/templates/index.html
+++ b/tribone/web/templates/index.html
@@ -8,10 +8,9 @@
 			<div class="row-fluid">
 				<div class="hero-unit">
 					<h1>
-						Andrew Tribone
-						<small>§Home</small>
+						<span>‘enobirt’[::-1]</span>
 					</h1>
-					<p>
+					<p class="smallcaps">
 						Hi. This page is a work in progress. To see the source visit
 						<a class="label label-info" href="https://github.com/att14/AndrewTribone">this cool website</a>.
 						Or check it out below.
@@ -22,7 +21,7 @@
 				<div class="span3">
 					<div class="well sidebar-nav">
 						<ul class="nav nav-list">
-							<li class="nav-header">
+							<li class="nav-header smallcaps">
 								att14/AndrewTribone
 							</li>
 						{% for content in contents %}
